syntax = "proto3";

// option java_multiple_files = true;
option java_package = "hengda.billboard";
option java_outer_classname = "FeedbackProto";

package feedback;

service Feedback {

  rpc insert(InsertRequest) returns (Reply) {}

  rpc list(ListRequest) returns (Reply) {}

}

message InsertRequest {
  uint32 user_id = 1;
  string user_uuid = 2;
  string user_category = 3;
  string content = 4;
  string datime = 5;
  string category = 6;
}

message ListRequest {
  uint32 user_id = 1;
  string user_category = 2;
}

message Reply { string data = 1; }
